<resources>
    <string name="app_name">Core</string>
    <string name="description">v_kendra</string>
    <string name="title_activity_dashboard">Vakrangee Franchisee</string>
    <string name="drawer_item_home">Home</string>
    <string name="next_gen_site_visit">NextGen Site Visit</string>
    <string name="next_gen_site_commencement">NextGen Site Commencement</string>
    <string name="next_gen_site_work_in_progress">NextGen Site Work In Progress</string>
    <string name="drawer_item_mytranscation">My Transaction</string>
    <string name="drawer_item_mobilerecharge">Mobile Recharge</string>
    <string name="drawer_item_dthrecharge">DTH Recharge</string>
    <string name="client_id">561109841218-ivacq1n68t0i8uk75d530ts258d28hdi.apps.googleusercontent.com</string>
    <string name="action_settings">Settings</string>
    <string name="rs">Current wallet balance available \u20B9 : </string>
    <string name="title_activity_update_geo_coordinates">Map</string>
    <string name="clear"> Clear</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="mobilerechargeicon">&#xf10b;</string>
    <string name="dthrechargeicon">&#xf26c;</string>
    <string name="cache_path">vkms/cache/</string>
    <string name="cancel"> Cancel</string>
    <string name="close">Close</string>
    <string name="submit"> Submit</string>
    <string name="save"> Save</string>
    <string name="next">Next</string>
    <string name="signIn">Sign In</string>
    <string name="internetCheck">Sorry, no internet connectivity detected. Please reconnect and try again.</string>
    <string name="insertSimcard">No SIM card detected.</string>
    <string name="alreadyRegistered">Registration details already exists, Do you want to continue from this Device and proceed.</string>
    <string name="invalidData">Invalid Data Entered, Please Verify All Information.</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="verified_lbl">Verified</string>
    <string name="rejected_lbl">Rejected</string>
    <string name="register">Register</string>
    <string name="VKID">VKID</string>
    <string name="name">Name as per Agreement</string>
    <string name="registeredMobileNumber">Registered Mobile Number</string>
    <string name="EmailId">Vakrangee Official Email ID</string>
    <string name="VKMSPassword">VKMS Password</string>
    <string name="unableToConnectVkms">Unable to connect VKMS Server Please Try Again</string>
    <string name="usernameNotMatch">Invalid VKID or Password.</string>
    <string name="enter9DigitsVKID">Enter 9 Character VKID </string>
    <string name="invalidPassword">Enter Password</string>
    <string name="pleaseWait">Please Wait!</string>
    <string name="authenicationUsernamePassword">"Authenticating VKID and Password..."</string>
    <string name="enter4CharacterName">Enter a minimum of 4 characters</string>
    <string name="enter10DigitesNumber">Enter 10 Digits Number </string>
    <string name="invalidEmail">Invalid Email Address</string>
    <string name="enter6CharacterPassword">Enter 8-20 Character Password</string>
    <string name="enterMpin">Enter 6 Digits Number </string>
    <string name="verifyOTP"> Verify  OTP</string>
    <string name="OTPVerification">OTP  Verification</string>
    <string name="OTP">OTP</string>
    <string name="invalidOTP">Invalid OTP  Please Try Again</string>
    <string name="enterOTP">Enter OTP</string>
    <string name="enterOTP8character">Enter 8 character OTP</string>
    <string name="setMpin">Please set Mpin</string>
    <string name="password">Mpin</string>
    <string name="confrimPassword">Confirm Mpin</string>
    <string name="passwordNotMatch">Password do not match</string>
    <string name="passwordVerify">Set Mpin</string>
    <string name="congratulations">Congratulation!! Mpin set has been done successfully. Please login to continue.</string>
    <string name="forgotMpin">Forgot Mpin</string>
    <string name="last_consent_pdf_url">/FLMDocuments?name={name}&amp;date={date}&amp;address={address}&amp;formType=NextGenConsent</string>
    <string name="consent_pdf_url">https://vkmssit.vakrangee.in/FLMDocuments?name={name}&amp;date={date}&amp;address={address}&amp;formType=NextGenConsent</string>
    <string name="mimnimum2DigitsNumber">Minimum 2 Digits  Amount number</string>
    <string name="selectServiceProvider">Select Service Provider</string>
    <string name="mobileRecharge">Mobile Recharge</string>
    <string name="enterMobileNumber">Mobile Number</string>
    <string name="amount">Amount</string>
    <string name="selectRelianceJIOPlan">Select Plan</string>
    <string name="dth">DTH Recharge</string>
    <string name="enter10DigitsCustomerId">Enter  Customer ID Number</string>
    <string name="customerId">Customer ID</string>
    <string name="myOutlets">My Outlets</string>
    <string name="mapChange">Do You want to change Map </string>
    <string name="uploadImage">Upload Image</string>
    <string name="drawer_item_mahavitran">Mahavitran</string>
    <string name="mahavitran">Mahavitran</string>
    <string name="billingUnit">Billing Unit</string>
    <string name="enterBillUnits">Enter Billing Unit Number</string>
    <string name="consumerNumber">Consumer Number</string>
    <string name="enter12DigitsConsumerNumber">Enter 12 Digits Consumer Number</string>
    <string name="onlineBillInfo">MSEDCL Online Bill Payment</string>
    <string name="consumerName">Consumer Name</string>
    <string name="billMonth">Bill Month</string>
    <string name="billNumber">Bill Number</string>
    <string name="billPeriod">Bill Period</string>
    <string name="billDate">Bill Date</string>
    <string name="incentiveDate">Incentive Date</string>
    <string name="dueDate">Due Date</string>
    <string name="disconnTag">Disconn Tag</string>
    <string name="PC">PC</string>
    <string name="DTCCode">DTC Code</string>
    <string name="billAmount">Bill Amount</string>
    <string name="incentiveAmount">Incentive Amount</string>
    <string name="amountAfterDueDate">Amount after due Date</string>
    <string name="back">Back</string>
    <string name="billAlreadyPaid">This bill has already been paid.</string>
    <string name="noBillFound">No Bill found for this billing unit and consumer number. Kindly check the billing unit and consumer number.</string>
    <string name="payBill">Pay \u20B9</string>
    <string name="transcationSuccessfull">Your Transaction has been Successful.</string>
    <string name="errorSendingMail">Services from Email Server unavailable. Please try after some time.</string>
    <string name="transcationprogress">we are processing your transaction request...</string>
    <string name="fetchingBalance">Fetching Balance...</string>
    <string name="mpinSet">Mpin Set...</string>
    <string name="verifiedOTP">Verifying OTP...</string>
    <string name="cycerplatServicedown">Service from CyberPlat unavailable, Please try after Sometime.</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="AccountStatement">My Wallet Statement</string>
    <string name="enterfromdate">Select from Date.</string>
    <string name="entertodate">Select To Date.</string>
    <string name="accountStmt">Fetching Details...</string>
    <string name="recyclerviewdataEmpety">No Records found.</string>
    <string name="myRechargeHistroy">My Recharge History</string>
    <string name="selectproperdate">Select Proper Date.</string>
    <string name="Warning">Warning! Oops, some error encountered. Please try again.</string>
    <string name="go"> Go</string>
    <string name="MyRechargeHistory">My Recharge History</string>
    <string name="mpinMsg">Note : Mpin will be used for Login as Password.</string>
    <string name="resetmpinMsg">Do you want to  reset your Mpin?</string>
    <string name="myhelpline">My HelpLine</string>
    <string name="accountdeactive">Your account has been Deactived.</string>
    <string name="resendOTP">Resend OTP</string>
    <string name="resendSuccessful">New OTP has been sent to your Email ID and Registered Mobile Number.</string>
    <string name="checkversion">Loading.</string>
    <string name="updateApplication">You are using outdated version of Application. Inorder to continue using the application upgrade to the latest version.</string>
    <string name="helpline">Fetching Help Line Info...</string>
    <string name="techincalwuery">For any technical query or assistance please call to Technical Support Department.Contact Number-022 67765178 or email to fitsd@vakrangee.in  </string>
    <string name="MyTransaction">My Transaction</string>
    <string name="resetMpin">Forgot Mpin</string>
    <string name="checkvkid">Invalid VKID, please check your VKID.</string>
    <string name="outlestimeing">MyOutlet Timing</string>
    <string name="opeingtime">09:00 AM</string>
    <string name="closingtime">09:00 PM</string>
    <string name="customerprofile">Customer Profile</string>
    <string name="aadharinvalid">The aadhaar number must be 12 characters long.</string>
    <string name="invalidPancard">Invalid Pancard Number.</string>
    <string name="invalidPincode">Pincode Number Invalid.</string>
    <string name="MyProflie">MyProfile</string>
    <string name="service">Services</string>
    <string name="mykendra">Vakrangee Kendra</string>
    <string name="mystatement">My VKMS</string>
    <string name="fieldforce">Field Force Dashboard</string>
    <string name="MyFieldForce">MyFieldForce</string>
    <string name="ConsumerNo">Consumer No.</string>
    <string name="BillingUnitNo">Billing Unit No.</string>
    <string name="CycleNo">Cycle No.</string>
    <string name="ElectricityBillPayment">Electricity Bill Payment</string>
    <string name="PipedGas">Piped Gas Bill Payment</string>
    <string name="LandlineBillPayment">Landline Bill Payment</string>
    <string name="PipedGasBillPayment">Piped Gas (PNG) Bill Payment</string>
    <string name="LandlineBill">Landline Bill Payment</string>
    <string name="Hindi">हिन्दी</string>
    <string name="English">English</string>
    <string name="myvideotraining">Training Video</string>
    <string name="fetchingtriaingvideo">Fetching Training Video</string>
    <string name="lblRemarks">Remarks</string>
    <string name="hintRemarks">Enter Remarks</string>
    <string name="image_type">Item Category</string>
    <string name="image_details">Image Details</string>
    <string name="add_txt">Add</string>
    <string name="please_add_images_max_10">Please add images.(Max. 10)</string>
</resources>