<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rect_topgray_shadow"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/titletextview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.8"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/image_details"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/parentLinearlytAddButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right|center"
                android:layout_marginRight="10dp"
                android:layout_weight="0.2"
                android:gravity="right|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textviewAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonroundedsubmit"
                    android:gravity="center_vertical|center_horizontal|right"
                    android:padding="5dp"
                    android:text="@string/add_txt"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/parentLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textviewMsg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/please_add_images_max_10"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyle_view_image_gallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:fadeScrollbars="false"
                android:scrollbarSize="2dp"
                android:scrollbarThumbHorizontal="@color/colorPrimary"
                android:scrollbars="horizontal"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

