<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGreyL2"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#13365C"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="Kendra Photo Preview"
                android:textColor="@color/md_white_1000"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="1dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/textViewImageTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="Image Title"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/parentLinearlytCaptureButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/buttonroundedsubmit"
                        android:gravity="right|center"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Change Photo"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textColor="#fff"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutImageType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="@color/colorGreyL6" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="0.45"
                            android:gravity="left"
                            android:padding="5dp"
                            android:text="@string/image_type"
                            android:textColor="@color/gray"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/spinnerImageType"
                            android:layout_width="0dp"
                            android:layout_height="37dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="30dp"
                            android:layout_weight="0.55"
                            android:background="@drawable/gradient_spinner"
                            android:gravity="center"
                            android:spinnerMode="dropdown"
                            android:textColor="@color/gray"
                            android:textSize="12sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.45"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/colorGreyL6" />

                    <in.vakrangee.core.commongui.imagepreview.ImageZoom
                        android:id="@+id/imageViewPreview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="5dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutRemarks"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.20"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:paddingTop="2dp"
                        android:text="@string/lblRemarks"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextRemarks"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edittext_bottom_bg"
                        android:gravity="top|center_vertical"
                        android:hint="@string/hintRemarks"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:maxLength="500"
                        android:paddingLeft="10dp"
                        android:paddingTop="3dp"
                        android:textColor="#2d2d2d"
                        android:textColorHint="@color/colorGreyL6"
                        android:textSize="16sp"
                        android:textStyle="bold"></EditText>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/layoutFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:weightSum="1">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.3"
                android:background="@drawable/buttonroundclear"
                android:gravity="center_vertical|center_horizontal|left"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnOK"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3"
                android:background="@drawable/buttonroundedsubmit"
                android:gravity="center_vertical|center_horizontal|left"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>